--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,14 @@ services:
     php:
         image: 'php:apache'
         volumes:
-            - './:/usr/share/nginx/html'
+            - './:/var/www/html'
+        ports: 
+            - 8000:80
+        tty: true
     composer:
         image: 'composer:1.8'
-        command: install
+        command: 
+            - install
+            - dump-autoload -o
         volumes:
             - './:/app'
